neuen link zu test.scala.html eingebaut

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,7 +2,18 @@
 
 @main("Welcome to Play Ã¶") {
 
-   <h1>test</h1>
-   <a href="@routes.Application.getTest()">test2</a>
+    <h1>Eigene Immobilien</h1>
+
+    <!--<a href="@routes.Application.getTest()">test2</a>-->
+
+    <h2> Haus1 </h2>
+    <!--<img src=""> </img>-->
+
+    <h2 id="Mieter">Mieter</h2>
+    <input type="text" name="Anzahl der Mieter">
+    <input type="text" name="Höhe der Mieterträge">
+
+    <h2 id="Abschreibungen">Abschreibungen</h2>
+
 
 }
