--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+            <!-- Bootstrap -->
+        <link href="@routes.Assets.versioned("javascripts/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
