--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
     <h1>Eigene Immobilien</h1>
 
-    <!--<a href="@routes.Application.getTest()">test2</a>-->
+    <!--<a href="@routes.Test.index()">test2</a>-->
 
     <h2> Haus1 </h2>
     <!--<img src=""> </img>-->
