--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,10 +4,13 @@
 
     <h1>Eigene Immobilien</h1>
 
-    <!--<a href="@routes.Application.getTest()">test2</a>-->
+    <!--<a href="@routes.Test.index()">test2</a>-->
 
     <h2> Haus1 </h2>
-    <!--<img src=""> </img>-->
+    <div class="media">
+        <img src="@routes.Assets.versioned("images/haus1.jpg")"> </img>
+    </div>
+
 
     <h2 id="Mieter">Mieter</h2>
     <input type="text" name="Anzahl der Mieter">
