--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(immobilieList: java.util.List[models.Immobilie])
 
-@main("Welcome to Play ö") {
+@main("Immo-Tracker") {
 
     <h1>Eigene Immobilien</h1>
 
