--- a/app/views/createImmo.scala.html
+++ b/app/views/createImmo.scala.html
@@ -1,4 +1,12 @@
-
+@(immoform: Form[Immobilie])
 <h1>Immobilie anlegen</h1>
 
-@_immoForm();
+
+@helper.form(action = routes.ImmobilienController.create()) {
+    @helper.inputText(immoform("name"))
+    @helper.inputText(immoform("imagePath"))
+    @helper.inputText(immoform("imagePath"))
+    <input type="submit"/>
+
+
+}
