--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,14 +6,45 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <meta name="viewport" content="width=device-width, initial-scale=0.7, maximum-scale=0.7, user-scalable=no">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-            <!-- Bootstrap -->
         <link href="@routes.Assets.versioned("javascripts/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="@routes.Assets.versioned("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+
     </head>
     <body>
-        @content
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+
+
+        <div class="navbar navbar-fixed-top navbar-default" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" type="button" data-target=".navbar-collapse" data-toggle="collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="@controllers.routes.Application.index()">Immo-Tracker</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="@if(title.contains("dashboard")) {active}"><a href="@controllers.routes.Application.index()">Dashboard</a></li>
+                        <li class="@if(title.contains("immobilie")) {active}"><a href="#">Immobilien</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            @content
+        </div>
+
+        <div class="footer navbar-fixed-bottom">
+            <div class="container text-center">
+                <div class="text-muted">
+                    <span>bester footer</span>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
