--- a/app/views/createImmo.scala.html
+++ b/app/views/createImmo.scala.html
@@ -1,12 +1,15 @@
 @(immoform: Form[Immobilie])
-<h1>Immobilie anlegen</h1>
+@main("Neue Immobilie ") {
+    <h1>Immobilie anlegen</h1>
 
 
-@helper.form(action = routes.ImmobilienController.create()) {
-    @helper.inputText(immoform("name"))
-    @helper.inputText(immoform("imagePath"))
-    @helper.inputText(immoform("imagePath"))
-    <input type="submit"/>
+    @helper.form(action = routes.ImmobilienController.create()) {
+        @helper.inputText(immoform("name"))
+        @helper.inputText(immoform("imagePath"))
+        @helper.inputText(immoform("imagePath"))
+        <input type="submit"/>
 
+
+    }
 
 }
