--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -14,9 +14,11 @@
 
     <h2 id="Mieter">Mieter</h2>
     <input type="text" name="Anzahl der Mieter">
-    <input type="text" name="Höhe der Mieterträge">
+    <input type="text" name="Hï¿½he der Mietertrï¿½ge">
 
     <h2 id="Abschreibungen">Abschreibungen</h2>
 
-
+    <a class="btn btn-default" href="@routes.ImmobilienController.create()" role="button">Neue Immobilie anlegen</a>
 }
+
+
