--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,9 +7,8 @@
         <title>@title</title>
         <meta name="viewport" content="width=device-width, initial-scale=0.7, maximum-scale=0.7, user-scalable=no">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <link href="@routes.Assets.versioned("javascripts/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("javascripts/bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-
 
     </head>
     <body>
