--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -6,4 +6,7 @@
         <img class="media-object" src="@routes.Assets.versioned("images/immobilien/" + immo.getImagePath())"> </img>
     </div>
 
+    <a class="btn btn-default" href="@routes.ImmobilienController.update()" role="button">Basisdaten bearbeitenn</a>
+    <a class="btn btn-default" href="@routes.ImmobilienController.delete()" role="button">Immobilie löschen</a>
+
 }
