front-site; chart

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -24,3 +24,12 @@ body {
   }
   margin: 20px 0;
 }
+
+.front-image {
+  max-height: 150px;
+}
+
+.chart {
+  height: 150px;
+  max-width: 300px;
+}
