--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -27,6 +27,10 @@ body {
 
 .front-image {
   max-height: 150px;
+  box-shadow: 0px 0px 8px 5px #fff;
+  -webkit-box-shadow: 0px 0px 8px 5px #fff;
+  -moz-box-shadow: 0px 0px 8px 5px #fff;
+  box-shadow: 0px 0px 8px 5px #fff;
 }
 
 .chart {
