--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,6 +15,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+
 
 
         <div class="navbar navbar-fixed-top navbar-default" role="navigation">
