neuen link zu test.scala.html eingebaut

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -32,7 +32,7 @@
                             <div class="row">@immobilie.getInvestitionenSum()€ geplante Investitonen</div>
                             <div class="row">@immobilie.getKrediteSum()€ Verbindlichkeiten</div>
                             <div class="row">@immobilie.getAbschreibungenSum()€ Abschreibungen</div>
-                            <div class="row"></div>
+                            <div class="row">------------------------------ </div>
                             <div class="row">@immobilie.getWert()€ Wert</div>
                         </td>
 
