--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -43,7 +43,12 @@ body {
 
 .chart {
   height: 150px;
-  max-width: 300px;
+  max-width: 350px;
+}
+
+.chart_big {
+  height: 350px;
+  max-width: 100%;
 }
 
 .space-row {
@@ -52,6 +57,11 @@ body {
 
 .bold-text {
   font-weight: bold;
+}
+
+.alert-heading {
+  width: 33%;
+  display: inline-block;
 }
 
 /*** PANEL INFO ***/
