--- a/app/views/editImmo.scala.html
+++ b/app/views/editImmo.scala.html
@@ -11,6 +11,12 @@
 
         @helper.inputText(immoform("name"))
 
+        @helper.inputDate(immoform("kaufDatum"))
+
+        @helper.inputText(immoform("kaufPreis"))
+
+        @helper.inputText(immoform("typ"))
+
         <input type="file" name="picture"/>
 
         <input type="submit"/>
