--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -27,7 +27,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="@controllers.routes.Application.index()">Immo-Tracker</a>
+                    <a class="navbar-brand" href="@controllers.routes.Application.index()"><i class="glyphicon glyphicon-home"></i>
+                        -Tracker</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -39,7 +40,7 @@
         </div>
 
         <div class="container">
-            @content
+        @content
         </div>
 
         <div class="footer navbar-fixed-bottom">
