--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -8,8 +8,8 @@
                 <div class="panel-heading">
                     <ul class="nav nav-tabs">
                         <li class="active"><a href="#dashboard" data-toggle="tab">Übersicht</a></li>
+                        <li><a href="#bilder" data-toggle="tab">Bilder</a></li>
                         <li><a href="#mieter" data-toggle="tab">Mieter</a></li>
-                        <li><a href="#abschreibungen" data-toggle="tab">Abschreibungen</a></li>
                         <li><a href="#investitionen" data-toggle="tab">Investitionen</a></li>
                         <li><a href="#kredite" data-toggle="tab">Kredite</a></li>
 
@@ -19,22 +19,117 @@
                     <div class="tab-content">
                         <div class="tab-pane fade in active" id="dashboard">
 
+                            <div style="margin-top : 15px">
+                                <div class="alert alert-info alert-heading" role="alert"><strong>Gesamtwert</strong></div>
+                                <div class="alert alert-success alert-heading" role="alert"><strong>Kaufpreis</strong>
+                                    (inkl Wertsteigerung)</div>
+                                <div class="alert alert-danger alert-heading" role="alert"><strong>Kredite</strong>
+                                    summiert</div>
+                            </div>
+
+                            <div class="chart_big" id="parent">
+                                <canvas id="chartid"></canvas>
+                            </div>
+                            <script type="application/javascript">
+                                var c1 = document.getElementById("chartid");
+
+                                var parent = document.getElementById("parent");
+                                c1.width = parent.offsetWidth;
+                                c1.height = parent.offsetHeight;
+
+                                var data1 = {
+                                  labels: ["M", "T", "W", "T", "F", "S", "S"],
+                                  datasets: [{
+                                    fillColor: "rgba(0,178,0,.1)",
+                                    strokeColor: "rgba(0,178,0,1)",
+                                    pointColor: "#00ff00",
+                                    pointStrokeColor: "rgba(0,178,0,1)",
+                                    data: [Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100)]
+                                  },{
+                                    fillColor: "rgba(178,0,0,.1)",
+                                    strokeColor: "rgba(178,0,0,1)",
+                                    pointColor: "#ff0000",
+                                    pointStrokeColor: "rgba(178,0,0,1)",
+                                    data: [Math.floor((Math.random() * 100) + 100), Math.floor((Math.random() * 100) + 100), Math.floor((Math.random() * 100) + 100), Math.floor((Math.random() * 100) + 100), Math.floor((Math.random() * 150) + 100), Math.floor((Math.random() * 180) + 100), Math.floor((Math.random() * 200) + 100)]
+                                  }]
+                                }
+
+                                var options1 = {
+                                  scaleFontColor: "rgba(178,178,178,1)",
+                                  scaleLineColor: "rgba(178,178,178,1)",
+                                  scaleGridLineColor: "transparent",
+                                  bezierCurve: false,
+                                  scaleOverride: true,
+                                  scaleSteps: 3,
+                                  scaleStepWidth: 100,
+                                  scaleStartValue: 0
+                                }
+
+                                new Chart(c1.getContext("2d")).Line(data1, options1)
+                            </script>
+                            <div class="container" style="margin-top : 15px ">
+                                <a class="btn btn-primary
+                                " href="@routes.ImmobilienController.update(immo.getId())" role="button">
+                                    Basisdaten bearbeitenn</a>
+                                <a class="btn btn-danger" href="@routes.ImmobilienController.delete(immo.getId())" role="button">
+                                    Immobilie löschen</a>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="bilder">
+
                             <div class="container">
-                                <div class="media" style="padding: 10px;">
+                                <div class="media" style="padding : 10px ;">
                                     <img class="media-object full-image" src="@routes.Assets.versioned("images/immobilien/" + immo.getImagePath())"> </img>
                                 </div>
                             </div>
 
-                            <div class="container">
-                                <a class="btn btn-default" href="@routes.ImmobilienController.update(immo.getId())" role="button">
-                                    Basisdaten bearbeitenn</a>
-                                <a class="btn btn-default" href="@routes.ImmobilienController.delete(immo.getId())" role="button">
-                                    Immobilie löschen</a>
-                            </div>
 
                         </div>
-                        <div class="tab-pane fade" id="mieter">Info 2</div>
-                        <div class="tab-pane fade" id="abschreibungen">Info 3</div>
+
+                        @if(immo.getMieter.size()>0){
+                        <div class="tab-pane fade" id="mieter">
+
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            Name
+                                        </th>
+                                        <th>
+                                            Bewertung
+                                        </th>
+                                        <th>
+                                            Miete
+                                        </th>
+                                        <th>
+                                            Vertragsdaten
+                                        </th>
+                                        <th>
+                                            Miet-Dauer
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                @for(mieter <- immo.getMieter()) {
+                                    <tr>
+                                        <td>@mieter.getName()</td>
+
+                                        <td>@mieter.getBewertung()</td>
+
+                                        <td>@mieter.getMiete()€</td>
+
+                                        <td>@mieter.getVertragsDetails()</td>
+
+                                        <td>@mieter.getMietStart().format("dd.MM.yy") - @mieter.getMietEnde().format("dd.MM.yy")</td>
+                                    </tr>
+                                }
+                                </tbody>
+                            </table>
+                            <div class="alert alert-success" role="alert">Gesamt-Miete: <strong>@immo.getMietSum()€</strong></div>
+                            }else{
+                            <div class="alert alert-danger" role="alert">Keine Mieter in dieser Immobilie</div>
+                            }
+                        </div>
                         <div class="tab-pane fade" id="investitionen">Info 4</div>
                         <div class="tab-pane fade" id="kredite">Info 5</div>
                     </div>
