--- a/app/views/editImmo.scala.html
+++ b/app/views/editImmo.scala.html
@@ -10,6 +10,9 @@
 
 
         @helper.inputText(immoform("name"))
+        @helper.inputText(immoform("kaufPreis"))
+        @helper.inputText(immoform("kaufDatum"))
+        @helper.inputText(immoform("typ"))
 
         @helper.inputDate(immoform("kaufDatum"))
 
