--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -130,7 +130,7 @@
                                 }else{
                                     <div class="alert alert-danger" role="alert">Keine Mieter in dieser Immobilie</div>
                                 }
-                                <div class="well-lg">
+                                <div class="well well-lg">
                                     Neuen Mieter erstellen
                                 </div>
                             </div>
