--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -34,6 +34,7 @@
                     <ul class="nav navbar-nav">
                         <li class="@if(title.contains("dashboard")) {active}"><a href="@controllers.routes.Application.index()">Dashboard</a></li>
                         <li class="@if(title.contains("immobilie")) {active}"><a href="#">Immobilien</a></li>
+                        <li class="@if(title.contains("intro")) {active}"><a href="@controllers.routes.Application.intro()">Intro</a></li>
                     </ul>
                 </div>
             </div>
