mieter & investitionen eintragen

--- a/app/views/editImmo.scala.html
+++ b/app/views/editImmo.scala.html
@@ -13,7 +13,7 @@
 
         @helper.inputText(immoform("kaufPreis"))
 
-        @helper.inputText(immoform("kaufDatum"))
+        @helper.inputDate(immoform("kaufDatum"))
 
         @helper.inputText(immoform("typ"))
 
