Kredite eintragen usw

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -4,6 +4,7 @@ html {
 }
 
 body {
+  font-family: Roboto, Calibri, Helvetica, sans-serif;
   padding-top: 60px;
   margin-bottom: 80px;
   overflow-x: hidden;
