--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,6 +6,7 @@
     <head>
         <title>@title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("javascripts/bootstrap/css/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
@@ -27,14 +28,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="@controllers.routes.Application.index()"><i class="glyphicon glyphicon-home"></i>
+                    <a class="navbar-brand" href="@controllers.routes.Application.dashboard()"><i class="glyphicon glyphicon-home"></i>
                         -Tracker</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="@if(title.contains("dashboard")) {active}"><a href="@controllers.routes.Application.index()">Dashboard</a></li>
-                        <li class="@if(title.contains("immobilie")) {active}"><a href="#">Immobilien</a></li>
-                        <li class="@if(title.contains("intro")) {active}"><a href="@controllers.routes.Application.intro()">Intro</a></li>
+                        <li class="@if(title.contains("Dashboard")) {active}"><a href="@controllers.routes.Application.dashboard()">Dashboard</a></li>
+                        <li class="@if(title.contains("Immobilie")) {active}"><a href="@controllers.routes.Application.immobilien()">Immobilien</a></li>
+                        <li class="@if(title.contains("Intro")) {active}"><a href="@controllers.routes.Application.intro()">Über uns</a></li>
                     </ul>
                 </div>
             </div>
