--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -158,8 +158,6 @@
                         </div>
 
                         <div class="tab-pane fade" id="investitionen">
-
-
                                 <table class="table" id="investition-table">
                                     <thead>
                                         <tr>
@@ -211,7 +209,71 @@
                             </div>
 
                         </div>
-                        <div class="tab-pane fade" id="kredite">Info 5</div>
+                        <div class="tab-pane fade" id="kredite">
+
+                            <table class="table" id="kredit-table">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            Betrag
+                                        </th>
+                                        <th>
+                                            Rate
+                                        </th>
+                                        <th>
+                                            Details
+                                        </th>
+                                        <th>
+                                           Laufzeit
+                                        </th>
+                                        <th style="width: 20px;">
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                @for(kredit <- immo.getKredite()) {
+                                    <tr id="kredit-@kredit.getId()">
+                                        <td>@kredit.getBetrag()€</td>
+
+                                        <td>@kredit.getRate()</td>
+
+                                        <td>@kredit.getDetails()</td>
+
+                                        <td>@kredit.getKreditStart().format("dd.MM.yyyy") - @kredit.getKreditEnde().format("dd.MM.yyyy")</td>
+
+                                        <td><button class="btn btn-danger pull-right" onclick="delkredit(@kredit.getId())"><i class="glyphicon glyphicon-trash"></i></button> </td>
+                                    </tr>
+                                }
+                                </tbody>
+                            </table>
+                            <div class="alert alert-warning" role="alert">Gesamt-Kredit: <strong>@immo.getKrediteSum()€</strong></div>
+
+                            <div class="well well-lg">
+                                <h3>Neuen Kredit erstellen</h3>
+                                <form id="new-kredit-form">
+                                    <div class="form-inline">
+                                        <input type="text" name="new-kredit-betrag" class="form-control form-inline" placeholder="Betrag" />
+
+                                        <input type="text" name="new-kredit-rate" class="form-control form-inline" placeholder="Rate" />
+
+                                        <input type="text" name="new-kredit-details" class="form-control form-inline" placeholder="Details" />
+
+                                    </div>
+                                    <div class="form-inline" style="margin-top: 15px;">
+                                        <label for="new-kredit-von">Start-Datum: </label>
+                                        <input type="date" name="new-kredit-von" class="form-control form-inline" />
+                                        <label for="new-kredit-bis" style="padding-left: 15px;">End-Datum: </label>
+                                        <input type="date" name="new-kredit-bis" class="form-control form-inline" />
+
+                                    </div>
+                                    <div class="form-group" style="margin-top: 15px;">
+                                        <input type="button" id="new-kredit-btn" class="btn btn-primary form-inline" value="erstellen" />
+                                    </div>
+                                </form>
+                            </div>
+
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -221,6 +283,18 @@
             function delmieter (id){
                 $.get("/ajax/del-mieter/"+id).done( function(data){
                     $("#mieter-"+id).remove();
+                });
+            }
+
+            function delinvestition (id){
+                $.get("/ajax/del-investition/"+id).done( function(data){
+                    $("#investition-"+id).remove();
+                });
+            }
+
+            function delkredit (id){
+                $.get("/ajax/del-kredit/"+id).done( function(data){
+                    $("#kredit-"+id).remove();
                 });
             }
 
@@ -239,14 +313,14 @@
                         $('#investition-table').append('<tr id="investition-'+data.id+'"><td>'+data.kosten+'€</td><td>'+data.beschreibung+'</td><td>'+new Date(data.datum).toLocaleDateString()+'</td><td><button class="btn btn-danger pull-right" onclick="delinvestition('+data.id+')"><i class="glyphicon glyphicon-trash"></i></button> </td></tr>');
                     });
                 });
-            });
-
-              function delinvestition (id){
-                $.get("/ajax/del-investition/"+id).done( function(data){
-                    $("#investition-"+id).remove();
+                 $("#new-kredit-btn").click(function() {
+                   $.post( "/ajax/new-kredit/@immo.getId()", $( "#new-kredit-form" ).serialize())
+                    .done(function( data ) {
+                        $( "#new-kredit-form" )[0].reset();
+                        $('#kredit-table').append('<tr id="kredit-'+data.id+'"><td>'+data.betrag+'€</td><td>'+data.rate+'</td><td>'+data.details+'</td><td>'+new Date(data.kreditStart).toLocaleDateString()+' - '+new Date(data.kreditEnde).toLocaleDateString()+'</td><td><button class="btn btn-danger pull-right" onclick="delkredit('+data.id+')"><i class="glyphicon glyphicon-trash"></i></button> </td></tr>');
+                    });
                 });
-            }
-
+            });
 
         </script>
     }
