--- a/app/views/showImmo.scala.html
+++ b/app/views/showImmo.scala.html
@@ -38,13 +38,13 @@
                                 c1.height = parent.offsetHeight;
 
                                 var data1 = {
-                                  labels: ["M", "T", "W", "T", "F", "S", "S"],
+                                  labels: ["Q3 2012", "Q4 2012", "Q1 2013", "Q2 2013","Q3 2013", "Q4 2013", "Q1 2014", "Q2 2014", "Q3 2014", "Q4 2014", "Q1 2015"],
                                   datasets: [{
                                     fillColor: "rgba(0,178,0,.1)",
                                     strokeColor: "rgba(0,178,0,1)",
                                     pointColor: "#00ff00",
                                     pointStrokeColor: "rgba(0,178,0,1)",
-                                    data: [Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100), Math.floor((Math.random() * 200) + 100)]
+                                    data: [@immo.calculateWert(1348956000000L),@immo.calculateWert(1356908400000L),@immo.calculateWert(1364684400000L),@immo.calculateWert(1372543200000L),@immo.calculateWert(1380492000000L),@immo.calculateWert(1388444400000L),@immo.calculateWert(1396216800000L),@immo.calculateWert(1404079200000L),@immo.calculateWert(1412028000000L),@immo.calculateWert(1419980400000L),@immo.calculateWert(1427752800000L)]
                                   },{
                                     fillColor: "rgba(178,0,0,.1)",
                                     strokeColor: "rgba(178,0,0,1)",
